# Flask-Web-Development

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Flasky/: .env-mysql.example  .env.example  boot.sh  config.py  flasky.py
Flasky/app/: __init__.py  decorators.py  email.py  fake.py  models.py
Flasky/app/api/: __init__.py  authentication.py  comments.py  decorators.py  errors.py  posts.py  users.py
Flasky/app/auth/: forms.py  routes.py
Flasky/app/main/: __init__.py  errors.py  forms.py  routes.py  services.py
Flasky/app/profile/: forms.py  routes.py
Flasky/app/static/: styles.css
Flasky/app/templates/: _comments.html  _macros.html  _posts.html  base.html  edit_post.html  index.html  moderate.html  post.html
Flasky/migrations/versions/: 19961ae9d366_added_default_permissions_fields_to_.py  58e7c0043395_added_body_html_field_to_post_model.py  67776865dc5b_added_many_updates.py  7884e2c44f48_added_follow_model_and_associations_in_.py  981547d86931_updated_to_new_sqlalchemy_orm_style_and_.py  9dcc17db78ba_added_new_post_model.py  a993af5a81f6_initial_migration.py  c376459dcdf4_added_body_html_field_to_post_model.py  c43bd49e7cfa_added_comment_model.py
Flasky/tests/: test_api.py  test_client.py  test_selenium.py  test_user_model.py
introduction_to_flask/chapter2/: chapter2.py
introduction_to_flask/chapter3/: chapter3.py
introduction_to_flask/chapter3/templates/: base.html
introduction_to_flask/chapter4/: chapter4.py
introduction_to_flask/chapter4/templates/: base.html
introduction_to_flask/chapter5/: chapter5.py
introduction_to_flask/chapter6/: chapter6.py
introduction_to_flask/chapter7/flasky/: .env.example  config.py  flasky.py
(+14 files in other folders)
