[project]
name = "flask-web-development"
version = "0.1.0"
description = "Course of book"
authors = [
    {name = "Timur Berezin",email = "timur.livepart1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-bootstrap (>=3.3.7.1,<4.0.0.0)",
    "flask-moment (>=1.0.6,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
